@@ -47,7 +47,8 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ## Documentation
 
 ## API
-- `word_wrap`: add ``trim_whitespace_after_newline`` option, which trims any whitespace at the beginning of a line after wrapping
+- ``word_wrap``: argument ``bool collapse_whitespace`` converted to enum ``word_wrap_wspace_mode mode``,
+  with valid modes ``WSMODE_KEEP_ALL``, ``WSMODE_COLLAPSE_ALL``, and ``WSMODE_TRIM_LEADING``.
 
 ## Lua
 - ``widgets.HotkeyLabel``: the ``key_sep`` string is now configurable
